--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SunshineWear</string>
-    <string name="message">Watch face tapped</string>
+    <string name="message">Update Requested</string>
     <string name="my_digital_name">Sunshine Wear</string>
 
     <string name="sunshine_wear_data_path">/sunshine_wear_data</string>
